# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]

## [2.0] - 2019-11-11

### Added
- This NEWS file
- Universal Numeric Fingerprints (UNF) are now used to support dataset validation.  The file `unf.csv` gives UNF hash strings for each dataset format, size, and file format.  By comparing these hash strings to working datasets, users can confirm which version of the dataset they are using.  
	- UNF are implemented using the `UNF` package in R.  <https://cran.r-project.org/web/packages/UNF/index.html>
	- For a brief introduction to UNF, see <https://cran.r-project.org/web/packages/UNF/vignettes/citation.html>
	- The following block briefly illustrates the use of UNF in practice:  
	
```{r}
library(UNF)

## UNF value for publications-philosophy of science-Rds v2.0
unf_value = 'nJaKSRjMpMV1zYGoOPFRlQ=='

pub_level = readRDS('publications_philsci.Rds')
pub_level_unf = unf(pub_level, version = 6, digits = 3, timezone = 'UTC')

identical(pub_level_unf$unf, unf_value)
```

### Removed
- Several redundant or (almost entirely) empty/NA columns were removed.  
	- Redundant `URL` column; cf <https://github.com/dhicks/comp-HOPOS/issues/11>
	- `member`, `prefix`, `score`, `source`, `subject`, `archive`, `authenticated.orcid`, `affiliation1.name`, `affiliation2.name`, `affiliation3.name`, `affiliation4.name`, `name`, `funder`, `assertion`
- Evelyn Brister manually identified and removed numerous non-article documents, such as tables of contents and book reviews. 
- Evelyn Brister manually identified authors who qualified as philosophers of science using the threshold criterion (i.e., 2 or more papers in a primary venue) but who primarily worked in other areas of philosophy.  These authors are:  
	- E. J. Lowe (metaphysics, phil mind, and phil lang.)