@@ -10,16 +10,22 @@
 library(tidyverse)
 library(lubridate)
 
-journal_pubs = read_rds('../data/01_papers.rds') %>%
+library(tictoc)
+library(assertthat)
+
+data_folder = file.path('..', 'data')
+
+journal_pubs = read_rds(file.path(data_folder, '01_papers.rds')) %>%
     filter(!duplicated(.))
-book_pubs = read_rds('../data/02_springer_books.rds') %>%
-    rename(doi = DOI, isbn = ISBN, issn = ISSN, url = URL)
-mn_pubs = readxl::read_xlsx('../data/00_Minnesota.xlsx') %>%
+book_pubs = read_rds(file.path(data_folder, '02_springer_books.rds')) %>%
+    rename(doi = DOI, isbn = ISBN, issn = ISSN, url = URL) %>% 
+    mutate()
+mn_pubs = readxl::read_xlsx(file.path(data_folder, '00_Minnesota.xlsx')) %>%
     mutate_at(vars(issued, volume), as.character) %>%
-    nest(.key = 'author', given, family)
+    nest(author = c(given, family))
 
 ## Canonical journal and book series titles
-canonical_titles = read_csv('../data/01_canonical_titles.csv')
+canonical_titles = read_csv('../data/00_canonical_titles.csv')
 
 # setdiff(names(journal_pubs), names(book_pubs))
 # setdiff(names(book_pubs), names(journal_pubs))
@@ -31,25 +37,42 @@ pubs_df = bind_rows(journal_pubs, book_pubs, mn_pubs) %>%
            pub_year = as.integer(year(pub_date))) %>%
     ## Replace CrossRef journal titles with canonical versions
     left_join(canonical_titles) %>%
-    mutate(publication_series = case_when(!is.na(pub_canonical) ~ pub_canonical, 
-                                          TRUE ~ NA_character_)) %>%
-    select(-pub_canonical, -n)
+    mutate(publication_series = if_else(!is.na(pub_canonical), 
+                                        pub_canonical,
+                                        publication_series)) %>% 
+    select(-pub_canonical, -n) %>% 
+    ## Drop some problem columns that we don't need anyways
+    select(-link, -funder, -assertion)
 
-# ggplot(pubs_df, aes(pub_year, color = publication_series)) +
-#     geom_freqpoly(binwidth = 1, position = 'stack')
+## TODO: handle NA publication_series
+# assert_that(!any(is.na(pubs_df$publication_series)))
+
+pubs_df %>% 
+    count(doi, title) %>% 
+    nrow() %>% 
+    identical(nrow(pubs_df)) %>% 
+    assert_that(msg = 'DOI + title do not uniquely identify documents')
+
 
 ## Reshape to author-level df --------------------
+## Rows w/ NULL author values
+null_author = pubs_df %>% 
+    filter(map_lgl(author, is.null)) %>% 
+    select(-author)
+
+## Apparently the new version of unnest is MUCH slower; 
+## wall times for 30k rows were ~80 seconds vs. ~1 sec
+# message('Expanding author column; can take a few minutes')
+tic()
 authors_df = pubs_df %>%
-    ## Drop `link` because it messes w/ unnesting authors
-    select(-link) %>%
     ## Remove rows w/ NULL author values
-    filter(map_lgl(author, negate(is.null))) %>%
+    anti_join(null_author, by = c('doi', 'title')) %>% 
+    # slice(1:30000) %>%
     ## Unnest authors
-    unnest(author) %>%
+    unnest_legacy(author) %>%
     ## Add back rows w/ NULL author values
-    right_join(pubs_df) %>%
-    ## This brought `author` and `link` back
-    select(-author, -link)
+    bind_rows(null_author)
+toc()
 
 author_counts = authors_df %>%
     select(doi, publication_group, family, given) %>%
@@ -71,13 +94,13 @@ authors_df %>%
 
 ## Output --------------------
 
-write_rds(pubs_df, path = '../data/03_publications.rds')
-write_rds(authors_df, path = '../data/03_authors.rds')
+write_rds(pubs_df, file.path(data_folder, '03_publications.rds'))
+write_rds(authors_df, file.path(data_folder, '03_authors.rds'))
 
 ## Python script used in 04 can't handle the encoding errors
 author_counts %>%
     filter(!str_detect(given, '\ufffd') & 
                !str_detect(family, '\ufffd')) %>% 
-    write_excel_csv(path = '../data/03_names.csv')
+    write_excel_csv(file.path(data_folder, '03_names.csv'))
 
 
